--- a/part-2-browser-document-events-interfaces/document/styles-and-classes/tasks/create-a-notification.html
+++ b/part-2-browser-document-events-interfaces/document/styles-and-classes/tasks/create-a-notification.html
@@ -27,6 +27,12 @@
           div.classList.add(className);
         }
         div.innerHTML = html;
+
+        document.body.append(div);
+
+        setTimeout(function () {
+          div.remove();
+        }, 1500);
       }
 
       showNotification({
