--- a/part-2-browser-document-events-interfaces/document/styles-and-classes/tasks/create-a-notification.html
+++ b/part-2-browser-document-events-interfaces/document/styles-and-classes/tasks/create-a-notification.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link
+      rel="stylesheet"
+      href="styles.css"
+    />
+  </head>
   <body>
     <h2>Notification is on the right</h2>
 
@@ -20,9 +26,9 @@
     <script>
       function showNotification({ top = 0, right = 0, className, html }) {
         const div = document.createElement("div");
-        div.style.top = top;
-        div.style.right = right;
         div.classList.add("notification");
+        div.style.top = top + "px";
+        div.style.right = right + "px";
         if (className) {
           div.classList.add(className);
         }
