--- a/part-2-browser-document-events-interfaces/document/styles-and-classes/tasks/create-a-notification.html
+++ b/part-2-browser-document-events-interfaces/document/styles-and-classes/tasks/create-a-notification.html
@@ -25,19 +25,22 @@
 
     <script>
       function showNotification({ top = 0, right = 0, className, html }) {
-        const div = document.createElement("div");
-        div.style.top = top + "px";
-        div.style.right = right + "px";
-        div.classList.add("notification");
-        if (className) {
-          div.classList.add(className);
-        }
-        div.innerHTML = html;
+        const notification = document.createElement("div");
 
-        document.body.append(div);
+        notification.classList.add("notification");
+
+        if (className) {
+          notification.classList.add(className);
+        }
+
+        notification.style.top = top + "px";
+        notification.style.right = right + "px";
+
+        notification.innerHTML = html;
+        document.body.append(notification);
 
         setTimeout(function () {
-          div.remove();
+          notification.remove();
         }, 1500);
       }
 
