--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      #example {
+        width: 300px;
+      }
+    </style>
+  </head>
   <body>
     <div id="example">...Text...</div>
     <script></script>
