--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      #example {
+        width: 300px;
+        height: 200px;
+        border: 25px solid #e8c48f;
+        overflow: auto;
+      }
+    </style>
+  </head>
   <body>
     <div id="example">
       <h3>Introduction</h3>
