--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/index.html
@@ -6,6 +6,7 @@
         width: 300px;
         height: 200px;
         border: 25px solid #e8c48f;
+        padding: 20px;
         overflow: auto;
       }
     </style>
