--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <body></body>
+  <body>
+    <main
+      id="main"
+      style="position: relative"
+    ></main>
+  </body>
 </html>
