--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      main {
+        position: relative;
+      }
+    </style>
+  </head>
   <body>
-    <main
-      id="main"
-      style="position: relative"
-    ></main>
+    <main id="main"></main>
   </body>
 </html>
