--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
@@ -5,9 +5,18 @@
       main {
         position: relative;
       }
+      #example {
+        position: absolute;
+        left: 180px;
+        top: 180px;
+      }
     </style>
   </head>
   <body>
-    <main id="main"></main>
+    <main id="main">
+      <article>
+        <div id="example">...</div>
+      </article>
+    </main>
   </body>
 </html>
