--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
@@ -18,5 +18,10 @@
         <div id="example">...</div>
       </article>
     </main>
+
+    <script>
+      const example = document.getElementById("example");
+      console.log();
+    </script>
   </body>
 </html>
