--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
@@ -28,6 +28,8 @@
     <script>
       const example = document.getElementById("example");
       console.log(example.offsetParent.id);
+      console.log(example.offsetLeft);
+      console.log(example.offsetTop);
     </script>
   </body>
 </html>
