--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
@@ -26,6 +26,10 @@
     </main>
 
     <script>
+      // There are several occasions when offsetParent is null:
+    </script>
+
+    <script>
       const example = document.getElementById("example");
       console.log(example.offsetParent.id);
       console.log(example.offsetLeft);
