--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <style>
-      main {
+      main,
+      #hidden {
         position: relative;
       }
       #example {
@@ -24,6 +25,8 @@
         </div>
       </article>
     </main>
+
+    <div id="hidden"></div>
 
     <script>
       // There are several occasions when offsetParent is null:
