--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
@@ -38,5 +38,7 @@
       console.log(example.offsetLeft);
       console.log(example.offsetTop);
     </script>
+
+    <script src="geometry.js"></script>
   </body>
 </html>
