--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
@@ -10,7 +10,9 @@
         position: absolute;
         left: 180px;
         top: 180px;
-        border: 1px solid black;
+        border: 25px solid black;
+        width: 300px;
+        height: 200px;
       }
     </style>
   </head>
