--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
@@ -13,6 +13,7 @@
         border: 25px solid black;
         width: 300px;
         height: 200px;
+        padding: 20px;
       }
     </style>
   </head>
