--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
@@ -21,10 +21,37 @@
     <main id="main">
       <article>
         <div id="example">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam
-          necessitatibus itaque commodi cum quo eligendi hic libero! Veniam at
-          quisquam quia possimus perspiciatis totam quo magni minus, impedit
-          tempore ipsam.
+          <h3>Nam necessitatibus itaque commodi</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam
+            necessitatibus itaque commodi cum quo eligendi hic libero! Veniam at
+            quisquam quia possimus perspiciatis totam quo magni minus, impedit
+            tempore ipsam.
+          </p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam
+            necessitatibus itaque commodi cum quo eligendi hic libero! Veniam at
+            quisquam quia possimus perspiciatis totam quo magni minus, impedit
+            tempore ipsam.
+          </p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam
+            necessitatibus itaque commodi cum quo eligendi hic libero! Veniam at
+            quisquam quia possimus perspiciatis totam quo magni minus, impedit
+            tempore ipsam.
+          </p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam
+            necessitatibus itaque commodi cum quo eligendi hic libero! Veniam at
+            quisquam quia possimus perspiciatis totam quo magni minus, impedit
+            tempore ipsam.
+          </p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam
+            necessitatibus itaque commodi cum quo eligendi hic libero! Veniam at
+            quisquam quia possimus perspiciatis totam quo magni minus, impedit
+            tempore ipsam.
+          </p>
         </div>
       </article>
     </main>
