--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
@@ -70,6 +70,10 @@
       console.log(example.offsetTop);
     </script>
 
+    <script>
+      console.log("offsetWidth", example.offsetWidth);
+    </script>
+
     <script src="geometry.js"></script>
   </body>
 </html>
