--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
@@ -72,6 +72,7 @@
 
     <script>
       console.log("offsetWidth", example.offsetWidth);
+      console.log("offsetHeight", example.offsetHeight);
     </script>
 
     <script src="geometry.js"></script>
