--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
@@ -54,6 +54,13 @@
             tempore ipsam.
           </p>
         </div>
+
+        <script>
+          console.log(
+            "clientLeft",
+            document.getElementById("example").clientLeft
+          );
+        </script>
       </article>
     </main>
 
