--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
@@ -60,6 +60,10 @@
             "clientLeft",
             document.getElementById("example").clientLeft
           );
+          console.log(
+            "clientTop",
+            document.getElementById("example").clientTop
+          );
         </script>
       </article>
     </main>
