--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
@@ -15,6 +15,7 @@
         padding: 20px;
         border: 25px solid black;
         overflow: auto;
+        margin: 20px;
       }
     </style>
   </head>
