--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry.html
@@ -58,6 +58,17 @@
 
         <script>
           console.log(
+            "clientWidth",
+            document.getElementById("example").clientWidth
+          );
+          console.log(
+            "clientHeight",
+            document.getElementById("example").clientHeight
+          );
+        </script>
+
+        <script>
+          console.log(
             "clientLeft",
             document.getElementById("example").clientLeft
           );
