--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-height.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-height.html
@@ -3,7 +3,11 @@
   <head>
     <style>
       #example {
-        border: 25px solid black;
+        border: 25px solid #e8c48f;
+        padding: 20px;
+        width: 300px;
+        height: 200px;
+        overflow: auto;
       }
     </style>
   </head>
