--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-height.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-height.html
@@ -51,7 +51,10 @@
 
     <script>
       function showScrollHeight() {
-        console.log(document.getElementById("example").scrollHeight);
+        console.log(
+          "scrollHeight",
+          document.getElementById("example").scrollHeight
+        );
       }
     </script>
   </body>
