--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-height.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-height.html
@@ -8,6 +8,9 @@
         width: 300px;
         height: 200px;
         overflow: auto;
+        position: absolute;
+        top: 60px;
+        left: 60px;
       }
     </style>
   </head>
