--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-height.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-height.html
@@ -51,6 +51,12 @@
         2002.
       </p>
     </div>
+    <button
+      onclick="resetHeight()"
+      type="button"
+    >
+      <span>element.style.height = </span>${element.scrollHeight}px
+    </button>
 
     <script>
       function showScrollHeight() {
