--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-height.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-height.html
@@ -65,6 +65,11 @@
           document.getElementById("example").scrollHeight
         );
       }
+
+      function resetHeight() {
+        const element = document.getElementById("example");
+        element.style.height = `${element.scrollHeight}px`;
+      }
     </script>
   </body>
 </html>
