--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-height.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-height.html
@@ -64,6 +64,10 @@
           "scrollHeight",
           document.getElementById("example").scrollHeight
         );
+        console.log(
+          "scrollWidth",
+          document.getElementById("example").scrollWidth
+        );
       }
 
       function resetHeight() {
