--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-height.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-height.html
@@ -4,7 +4,7 @@
     <style>
       #example {
         border: 25px solid #e8c48f;
-        padding: 20px;
+        /* padding: 20px; */
         width: 300px;
         height: 200px;
         overflow: auto;
@@ -64,10 +64,10 @@
           "scrollHeight",
           document.getElementById("example").scrollHeight
         );
-        console.log(
-          "scrollWidth",
-          document.getElementById("example").scrollWidth
-        );
+        // console.log(
+        //   "scrollWidth",
+        //   document.getElementById("example").scrollWidth
+        // );
       }
 
       function resetHeight() {
