--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/sample-element/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/sample-element/index.html
@@ -3,6 +3,14 @@
   <head>
     <style>
       #example {
+        border: 25px solid black;
+        padding: 20px;
+        width: 300px;
+        height: 200px;
+        overflow: auto;
+        position: absolute;
+        top: 50px;
+        left: 50px;
       }
     </style>
   </head>
