--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/sample-element/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/sample-element/index.html
@@ -15,7 +15,10 @@
     </style>
   </head>
   <body>
-    <div id="example">
+    <div
+      onscroll="printScrollTop()"
+      id="example"
+    >
       <h3>Introduction</h3>
       <p>
         This Ecma Standard is based on several originating technologies, the
