--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/sample-element/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/sample-element/index.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       #example {
-        border: 25px solid black;
+        border: 25px solid #e8c48f;
         padding: 20px;
         width: 300px;
         height: 200px;
