--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry/index.html
@@ -3,6 +3,9 @@
   <head>
     <style>
       #example {
+        position: absolute;
+        top: 50px;
+        left: 50px;
       }
     </style>
   </head>
