--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry/index.html
@@ -6,6 +6,10 @@
         position: absolute;
         top: 50px;
         left: 50px;
+        width: 300px;
+        height: 200px;
+        padding: 20px;
+        border: 25px solid black;
       }
     </style>
   </head>
