--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry/index.html
@@ -9,7 +9,7 @@
         width: 300px;
         height: 200px;
         padding: 20px;
-        border: 25px solid black;
+        border: 25px solid #e8c48f;
       }
     </style>
   </head>
