--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry/index.html
@@ -10,6 +10,7 @@
         height: 200px;
         padding: 20px;
         border: 25px solid #e8c48f;
+        overflow: auto;
       }
     </style>
   </head>
