--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/geometry/index.html
@@ -15,7 +15,10 @@
     </style>
   </head>
   <body>
-    <div id="example">
+    <div
+      id="example"
+      onscroll="showScrollTop()"
+    >
       <h3>Introduction</h3>
       <p>
         This Ecma Standard is based on several originating technologies, the
