--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      #example {
+      }
+    </style>
+  </head>
   <body>
     <script src="index.js"></script>
   </body>
