--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/index.html
@@ -3,6 +3,10 @@
   <head>
     <style>
       #example {
+        position: absolute;
+        top: 50px;
+        left: 50px;
+        border: 25px solid black;
       }
     </style>
   </head>
