--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/index.html
@@ -6,7 +6,7 @@
         position: absolute;
         top: 50px;
         left: 50px;
-        border: 25px solid black;
+        border: 25px solid #e8c48f;
       }
     </style>
   </head>
