--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-absolute.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-absolute.html
@@ -3,6 +3,12 @@
   <head>
     <style>
       #main {
+        position: absolute;
+        top: 50px;
+        left: 50px;
+        border: 10px solid black;
+        width: 400px;
+        height: 300px;
       }
     </style>
   </head>
