--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-absolute.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-absolute.html
@@ -13,6 +13,8 @@
     </style>
   </head>
   <body>
-    <div id="main"></div>
+    <div id="main">
+      <div id="example"></div>
+    </div>
   </body>
 </html>
