--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-absolute.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-absolute.html
@@ -10,11 +10,19 @@
         width: 400px;
         height: 300px;
       }
+      #example {
+        position: inherit;
+        top: 20px;
+        left: 20px;
+        border: 20px solid #e8c48f;
+        width: 200px;
+        height: 200px;
+      }
     </style>
   </head>
   <body>
     <div id="main">
-      <div id="example"></div>
+      <div id="example">dnjns</div>
     </div>
   </body>
 </html>
