--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-absolute.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-absolute.html
@@ -22,7 +22,12 @@
   </head>
   <body>
     <div id="main">
-      <div id="example">dnjns</div>
+      <div id="example">...</div>
     </div>
+
+    <script>
+      const example = document.getElementById("example");
+      console.log("offsetParent", example.offsetParent);
+    </script>
   </body>
 </html>
