--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-absolute.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-absolute.html
@@ -30,6 +30,7 @@
 
       console.log("offsetParent", example.offsetParent);
       console.log("offsetLeft", example.offsetLeft);
+      console.log("offsetTop", example.offsetTop);
     </script>
   </body>
 </html>
