--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-relative.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-relative.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      #main {
+        border: 10px dashed black;
+        width: 400px;
+        height: 300px;
+      }
+    </style>
+  </head>
   <body>
     <div id="main"></div>
   </body>
