--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-relative.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-relative.html
@@ -6,6 +6,9 @@
         border: 10px dashed black;
         width: 400px;
         height: 300px;
+        position: relative;
+        top: 50px;
+        left: 50px;
       }
     </style>
   </head>
