--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-relative.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-relative.html
@@ -29,6 +29,7 @@
       const example = document.getElementById("example");
 
       console.log("offsetParent", example.offsetParent);
+      console.log("offsetLeft", example.offsetLeft);
     </script>
   </body>
 </html>
