--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-fixed.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-fixed.html
@@ -3,7 +3,16 @@
   <head>
     <style>
       #main {
+        position: fixed;
+        top: 50px;
+        left: 50px;
+        border: 10px solid black;
+        width: 400px;
+        height: 300px;
       }
     </style>
   </head>
+  <body>
+    <div id="main"></div>
+  </body>
 </html>
