--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-fixed.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-fixed.html
@@ -10,9 +10,19 @@
         width: 400px;
         height: 300px;
       }
+      #example {
+        border: 20px solid #e8c48f;
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        width: 300px;
+        height: 200px;
+      }
     </style>
   </head>
   <body>
-    <div id="main"></div>
+    <div id="main">
+      <div id="example">...</div>
+    </div>
   </body>
 </html>
