--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-fixed.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-fixed.html
@@ -24,5 +24,10 @@
     <div id="main">
       <div id="example">...</div>
     </div>
+
+    <script>
+      const example = document.getElementById("example");
+      console.log(example);
+    </script>
   </body>
 </html>
