--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-fixed.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-fixed.html
@@ -27,7 +27,8 @@
 
     <script>
       const example = document.getElementById("example");
-      console.log(example);
+
+      console.log("offsetParent", example.offsetParent);
     </script>
   </body>
 </html>
