--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-sticky.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-sticky.html
@@ -25,7 +25,9 @@
       facilis repellat hic ut minima a perspiciatis vero quod repellendus
       quaerat? Laboriosam, obcaecati.
     </p>
-    <div id="main"></div>
+    <div id="main">
+      <div id="example"></div>
+    </div>
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore
       explicabo repudiandae corporis at error beatae exercitationem, aliquid
