--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-sticky.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-sticky.html
@@ -10,6 +10,12 @@
         width: 400px;
         height: 300px;
       }
+      #example {
+        border: 20px solid #e8c48f;
+        position: absolute;
+        top: 20px;
+        left: 20px;
+      }
     </style>
   </head>
   <body>
