--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-sticky.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-sticky.html
@@ -15,6 +15,8 @@
         position: absolute;
         top: 20px;
         left: 20px;
+        width: 300px;
+        height: 200px;
       }
     </style>
   </head>
