--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-sticky.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-sticky.html
@@ -36,6 +36,13 @@
     <div id="main">
       <div id="example"></div>
     </div>
+
+    <script>
+      const example = document.getElementById("example");
+
+      console.log(example);
+    </script>
+
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore
       explicabo repudiandae corporis at error beatae exercitationem, aliquid
