--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-sticky.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-sticky.html
@@ -40,7 +40,9 @@
     <script>
       const example = document.getElementById("example");
 
-      console.log(example);
+      console.log("offsetParent", example.offsetParent);
+      console.log("offsetLeft", example.offsetLeft);
+      console.log("offsetTop", example.offsetTop);
     </script>
 
     <p>
