--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style></style>
+    <style>
+      table {
+      }
+      th,
+      td {
+        border: 1px solid black;
+      }
+    </style>
   </head>
   <body>
     <table>
@@ -9,6 +16,10 @@
         <tr>
           <th>Name</th>
           <th>Surname</th>
+        </tr>
+        <tr>
+          <td>Zelito Atumane</td>
+          <td>Saide</td>
         </tr>
       </tbody>
     </table>
