--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
@@ -6,6 +6,8 @@
       th,
       td {
         border: 1px solid black;
+        width: 300px;
+        height: 100px;
       }
     </style>
   </head>
