--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
@@ -6,7 +6,11 @@
       th,
       td {
         border: 1px solid black;
-        width: 300px;
+      }
+
+      th,
+      td {
+        width: 200px;
         height: 100px;
       }
     </style>
@@ -15,7 +19,9 @@
     <table>
       <tbody>
         <tr>
-          <th></th>
+          <th>
+            <div id="thead"></div>
+          </th>
           <th></th>
         </tr>
         <tr>
