--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <style>
+      table {
+        position: relative;
+        top: 50px;
+        left: 50px;
+      }
       table,
       th,
       td {
@@ -12,6 +17,12 @@
       td {
         width: 200px;
         height: 100px;
+      }
+
+      #thead {
+        border: 10px solid #e8c48f;
+        position: absolute;
+        top: 10px;
       }
     </style>
   </head>
