--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
@@ -2,11 +2,6 @@
 <html>
   <head>
     <style>
-      table {
-        position: relative;
-        top: 50px;
-        left: 50px;
-      }
       table,
       th,
       td {
@@ -21,8 +16,6 @@
 
       #thead {
         border: 10px solid #e8c48f;
-        position: absolute;
-        top: 10px;
       }
     </style>
   </head>
@@ -41,5 +34,10 @@
         </tr>
       </tbody>
     </table>
+
+    <script>
+      const thead = document.getElementById("thead");
+      console.log("offsetParent", thead.offsetParent);
+    </script>
   </body>
 </html>
