--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
@@ -28,7 +28,9 @@
           </th>
         </tr>
         <tr>
-          <td></td>
+          <td>
+            <div id="tdata"></div>
+          </td>
         </tr>
       </tbody>
     </table>
