--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
@@ -14,7 +14,8 @@
         height: 100px;
       }
 
-      #thead {
+      #thead,
+      #tdata {
         border: 10px solid #e8c48f;
       }
     </style>
