--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
@@ -12,6 +12,7 @@
       td {
         width: 200px;
         height: 100px;
+        display: inline-block;
       }
 
       #thead,
@@ -39,6 +40,7 @@
     <script>
       const thead = document.getElementById("thead");
       console.log("offsetParent", thead.offsetParent);
+      console.log("offsetTop", thead.offsetTop);
     </script>
   </body>
 </html>
