--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
@@ -42,6 +42,7 @@
       const thead = document.getElementById("thead");
       console.log("offsetParent", thead.offsetParent);
       console.log("offsetTop", thead.offsetTop);
+      console.log("offsetLeft", thead.offsetLeft);
     </script>
   </body>
 </html>
