--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
@@ -39,6 +39,7 @@
     </table>
 
     <script>
+      // For th
       const thead = document.getElementById("thead");
       console.log("offsetParent", thead.offsetParent);
       console.log("offsetTop", thead.offsetTop);
