--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
@@ -41,9 +41,11 @@
     <script>
       // For th
       const thead = document.getElementById("thead");
-      console.log("offsetParent", thead.offsetParent);
-      console.log("offsetTop", thead.offsetTop);
-      console.log("offsetLeft", thead.offsetLeft);
+      console.log("th:::offsetParent", thead.offsetParent);
+      console.log("th:::offsetTop", thead.offsetTop);
+      console.log("th:::offsetLeft", thead.offsetLeft);
+
+      // For td
     </script>
   </body>
 </html>
