--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
@@ -46,6 +46,9 @@
       console.log("th:::offsetLeft", thead.offsetLeft);
 
       // For td
+      const tdata = document.getElementById("tdata");
+      console.log("td:::offsetParent", tdata.offsetParent);
+      console.log("td:::offsetTop", tdata.offsetTop);
     </script>
   </body>
 </html>
