--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
@@ -49,6 +49,7 @@
       const tdata = document.getElementById("tdata");
       console.log("td:::offsetParent", tdata.offsetParent);
       console.log("td:::offsetTop", tdata.offsetTop);
+      console.log("td:::offsetLeft", tdata.offsetLeft);
     </script>
   </body>
 </html>
