--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
@@ -24,9 +24,9 @@
   </head>
   <body>
     <table>
-      <tbody>
-        <tr>
-          <th>
+      <tbody id="tbody">
+        <tr id="tr">
+          <th id="td">
             <div id="thead"></div>
           </th>
         </tr>
@@ -50,6 +50,9 @@
       console.log("td:::offsetParent", tdata.offsetParent);
       console.log("td:::offsetTop", tdata.offsetTop);
       console.log("td:::offsetLeft", tdata.offsetLeft);
+
+      // For table
+      // const
     </script>
   </body>
 </html>
