--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
@@ -52,7 +52,8 @@
       console.log("td:::offsetLeft", tdata.offsetLeft);
 
       // For table
-      // const
+      const tbody = document.getElementById("tbody");
+      console.log("offsetParent of tbody", tbody.offsetParent);
     </script>
   </body>
 </html>
