--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
@@ -53,7 +53,9 @@
 
       // For table
       const tbody = document.getElementById("tbody");
+      const tr = document.getElementById("tr");
       console.log("offsetParent of tbody", tbody.offsetParent);
+      console.log("offsetParent of tr", tr.offsetParent);
     </script>
   </body>
 </html>
