--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
@@ -54,8 +54,10 @@
       // For table
       const tbody = document.getElementById("tbody");
       const tr = document.getElementById("tr");
+      const th = document.getElementById("th");
       console.log("offsetParent of tbody", tbody.offsetParent);
       console.log("offsetParent of tr", tr.offsetParent);
+      console.log("offsetParent of th", th.offsetParent);
     </script>
   </body>
 </html>
