--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-table-th-td.html
@@ -55,6 +55,7 @@
       const tbody = document.getElementById("tbody");
       const tr = document.getElementById("tr");
       const th = document.getElementById("th");
+      const td = document.getElementById("td");
       console.log("offsetParent of tbody", tbody.offsetParent);
       console.log("offsetParent of tr", tr.offsetParent);
       console.log("offsetParent of th", th.offsetParent);
